--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,11 +24,12 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    environment: wayofthecrab.com
     steps:
       - name: Prepare SSH
         run:
           mkdir ~/.ssh
-          chmod 0700 .ssh
+          chmod 0700 ~/.ssh
           echo "$SSH_KEY" > ~/.ssh/id_rsa
           echo "$KNOWN_HOSTS" > ~/.ssh/known_hosts
           chmod 0600 ~/.ssh/*
