Getting CI working
This message will be repeated.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
     environment: wayofthecrab.com
     steps:
       - name: Prepare SSH
-        run:
+        run: |
           mkdir ~/.ssh
           chmod 0700 ~/.ssh
           echo "$SSH_KEY" > ~/.ssh/id_rsa
