Getting CI working
This message will be repeated.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,10 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     environment: wayofthecrab.com
+    needs: [build]
     steps:
+      - uses: actions/download-artifact@v3
+
       - name: Prepare SSH
         run: |
           mkdir ~/.ssh
