Enabling zola check

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,9 @@ jobs:
         run: |
           wget https://github.com/getzola/zola/releases/download/v0.17.2/zola-v0.17.2-x86_64-unknown-linux-gnu.tar.gz
           tar -xzf zola-v0.17.2-x86_64-unknown-linux-gnu.tar.gz
+      - name: Check
+        run: |
+          ./zola check
       - name: Build
         run: |
           ./zola build
