Enabling auto-cleanup in rsync

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,4 +45,4 @@ jobs:
 
       - name: Rsync
         run:
-          rsync -aivzd public/ wotc@wayofthecrab.com:public/
+          rsync -aivzd --delete public/ wotc@wayofthecrab.com:public/
