--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ compile_sass = true
 build_search_index = true
 generate_feed = true
 feed_filename = "rss.xml"
-
+external_links_target_blank = true
 
 [markdown]
 # Whether to do syntax highlighting
